# C-logger

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  logger.cpp  logger.hpp  logger_group.hpp  logger_singleton.hpp  logger_singleton_macros.hpp  movable_logger.hpp  unmovable_logger.hpp
test/: CMakeLists.txt  basic_test.cpp  basic_test.hpp  fixture.hpp  logger_group_test.cpp  logger_group_test.hpp  logger_singleton_test.cpp  logger_test.cpp  logger_test.hpp  redirect_cout.hpp  test.cpp  test_main.cpp
